# prosper

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  clang-time-trace.sh  readme.md  todo.txt
ext/: CMakeLists.txt  ispc_texcomp_CMakeLists.txt
res/: CMakeLists.txt  default_prosper_imgui.ini
res/shader/: CMakeLists.txt  brdf.glsl  camera.glsl  common.glsl  debug.glsl  debug_color.frag  debug_lines.vert  deferred_shading.comp  down_sampler.comp  draw_list_culler.comp  draw_list_culler_arg_writer.comp  draw_list_generator.comp  ds0_lights.glsl  ds1_camera.glsl  ds1_light_clusters.glsl  ds2_camera.glsl  ds2_light_clusters.glsl  forward.frag  forward.mesh  forward.vert  forward_pc.glsl  gbuffer.frag  gbuffer_pc.glsl  geometry.glsl  hiz_downsampler.comp  light_clustering.comp  light_clusters.glsl  lighting.glsl  lights.glsl  material.glsl  materials.glsl  pc_mesh.glsl  random.glsl  sampling.glsl  scene.frag  scene.vert  scene_pc.glsl  shader.frag  shader.vert  skybox.frag  (+7 more)
res/shader/bloom/: blur.comp  compose.comp  convolution.comp  fft.comp  generate_kernel.comp  prepare_kernel.comp  reduce.comp  separate.comp
res/shader/common/: dither.glsl  math.glsl  random.glsl  sampling.glsl
res/shader/dof/: bilateral.glsl  combine.comp  dilate.comp  filter.comp  flatten.comp  gather.comp  reduce.comp  setup.comp
res/shader/ibl/: integrate_specular_brdf.comp  prefilter_radiance.comp  sample_irradiance.comp
res/shader/particles/: decay.comp  freelist.glsl  init.comp  render.frag  render.vert  simulate.comp
res/shader/restir_di/: compose.comp  initial_reservoirs.comp  resampling_phat.glsl  reservoir.glsl  spatial_reuse.comp
res/shader/rt/: payload.glsl  ray.glsl  rt_data.glsl  rtpc.glsl  scene.rahit  scene.rchit  scene.rgen  scene.rmiss
res/shader/scene/: camera.glsl  geometry.glsl  instances.glsl  light_clusters.glsl  lighting.glsl  lights.glsl  material.glsl  materials.glsl  skybox.glsl  transforms.glsl  vertex.glsl  visible_surface.glsl
res/shader/svgf/: accumulate.comp
src/: Allocators.cpp  Allocators.hpp  App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  ComputePass.cpp  Constants.cpp  Dds.cpp  DebugGeometry.cpp  DebugRenderer.cpp  DeferredShading.cpp  DepthOfField.cpp  DepthOfFieldCombine.cpp  DepthOfFieldDilate.cpp  DepthOfFieldFlatten.cpp  DepthOfFieldGather.cpp  DepthOfFieldSetup.cpp  DescriptorAllocator.cpp  Device.cpp  DownSampler.cpp  GBufferRenderer.cpp  ImGuiRenderer.cpp  InputHandler.cpp  Light.cpp  LightClustering.cpp  Material.cpp  Mesh.cpp  Profiler.cpp  RTRenderer.cpp  RenderImageCollection.cpp  RenderResources.cpp  RenderTargets.cpp  Renderer.cpp  Resources.cpp  ShaderReflection.cpp  SkyboxRenderer.cpp  Swapchain.cpp  Texture.cpp  TextureDebug.cpp  (+12 more)
src/gfx/: CMakeLists.txt  DescriptorAllocator.cpp  DescriptorAllocator.hpp  Device.cpp  Device.hpp  Fwd.hpp  Resources.cpp  Resources.hpp  RingBuffer.cpp  RingBuffer.hpp  ShaderIncludes.cpp  ShaderIncludes.hpp  ShaderReflection.cpp  ShaderReflection.hpp  Swapchain.cpp  Swapchain.hpp  VkUtils.cpp  VkUtils.hpp  vmaImplementation.cpp  vulkan.cpp
src/render/: CMakeLists.txt  ComputePass.cpp  ComputePass.hpp  DebugRenderer.cpp  DebugRenderer.hpp  DeferredShading.cpp  DeferredShading.hpp  DrawStats.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Fwd.hpp  GBuffer.cpp  GBuffer.hpp  GBufferRenderer.cpp  GBufferRenderer.hpp  HierarchicalDepthDownsampler.cpp  HierarchicalDepthDownsampler.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  ImageBasedLighting.cpp  ImageBasedLighting.hpp  LightClustering.cpp  LightClustering.hpp  MeshletCuller.cpp  MeshletCuller.hpp  RTRenderer.cpp  RTRenderer.hpp  RenderBufferCollection.cpp  RenderBufferCollection.hpp  RenderImageCollection.cpp  RenderImageCollection.hpp  RenderResourceCollection.hpp  RenderResourceHandle.hpp  RenderResources.cpp  RenderResources.hpp  RenderTargets.cpp  RenderTargets.hpp  RenderTexelBufferCollection.cpp  RenderTexelBufferCollection.hpp  Renderer.cpp  (+17 more)
src/render/bloom/: Bloom.cpp  Bloom.hpp  BloomBlur.cpp  BloomBlur.hpp  BloomCompose.cpp  BloomCompose.hpp  BloomConvolution.cpp  BloomConvolution.hpp  BloomFft.cpp  BloomFft.hpp  BloomGenerateKernel.cpp  BloomGenerateKernel.hpp  BloomReduce.cpp  BloomReduce.hpp  BloomResolutionScale.cpp  BloomResolutionScale.hpp  BloomSeparate.cpp  BloomSeparate.hpp  BloomTechnique.cpp  BloomTechnique.hpp  Blur.cpp  Blur.hpp  CMakeLists.txt  Compose.cpp  Compose.hpp  Convolution.cpp  Convolution.hpp  Fft.cpp  Fft.hpp  Fwd.hpp  GenerateKernel.cpp  GenerateKernel.hpp  Reduce.cpp  Reduce.hpp  ResolutionScale.cpp  ResolutionScale.hpp  Separate.cpp  Separate.hpp  Technique.cpp  Technique.hpp
src/render/dof/: CMakeLists.txt  Combine.cpp  Combine.hpp  DepthOfField.cpp  DepthOfField.hpp  DepthOfFieldCombine.cpp  DepthOfFieldCombine.hpp  DepthOfFieldDilate.cpp  DepthOfFieldDilate.hpp  DepthOfFieldFilter.cpp  DepthOfFieldFilter.hpp  DepthOfFieldFlatten.cpp  DepthOfFieldFlatten.hpp  DepthOfFieldGather.cpp  DepthOfFieldGather.hpp  DepthOfFieldReduce.cpp  DepthOfFieldReduce.hpp  DepthOfFieldSetup.cpp  DepthOfFieldSetup.hpp  Dilate.cpp  Dilate.hpp  Filter.cpp  Filter.hpp  Flatten.cpp  Flatten.hpp  Fwd.hpp  Gather.cpp  Gather.hpp  Reduce.cpp  Reduce.hpp  Setup.cpp  Setup.hpp
src/render/particles/: CMakeLists.txt  Decay.cpp  Decay.hpp  Init.cpp  (+7 more)
src/scene/: Accessors.cpp  Accessors.hpp  Animations.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DebugDrawTypes.hpp  DebugGeometry.cpp  DebugGeometry.hpp  DeferredLoadingContext.cpp  DeferredLoadingContext.hpp  DrawType.cpp  DrawType.hpp  Fwd.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  Scene.hpp  Texture.cpp  Texture.hpp  World.cpp  World.hpp  WorldData.cpp  WorldData.hpp  WorldRenderStructs.hpp  cgltfImplementation.cpp  stbImplementation.cpp
src/utils/: CMakeLists.txt  Dds.cpp  Dds.hpp  ForEach.hpp  Fwd.hpp  Hashes.hpp  InputHandler.cpp  InputHandler.hpp  Ktx.cpp  Ktx.hpp  Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp  SceneStats.hpp  TaskScheduler.cpp  TaskScheduler.hpp  Timer.cpp  Timer.hpp  Ui.hpp  Utils.cpp  Utils.hpp
(+143 files in other folders)
